# embassy-demo

./: Cargo.toml  build.rs  rust-toolchain.toml
src/: main.rs
